--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ autopep8 = "^2.3.1"
 mypy = "^1.13.0"
 pytest = "^8.3.4"
 
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
