--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -44,7 +44,7 @@ jobs:
         run: poetry run black . --check
           
       - name: Lint with flake8
-        run: poetry run flake8 . --max-line-length=120 --exclude=.venv
+        run: poetry run flake8 .
 
   test:
     name: Tests
