--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,22 @@ flake8 = "^7.1.1"
 autopep8 = "^2.3.1"
 mypy = "^1.13.0"
 pytest = "^8.3.4"
+flake8-pyproject = "^1.2.3"
+
+[tool.black]
+line-length = 120
+target-version = ["py311"]
+include = '\.pyi?$'
 
 [tool.isort]
 profile = "black"
+line_length = 120
 multi_line_output = 3
+
+[tool.flake8]
+max-line-length = 120
+extend-ignore = ["E203", "W503"]
+exclude = [".venv", ".git", "__pycache__"]
 
 [build-system]
 requires = ["poetry-core"]
