--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 loguru = "^0.7.3"
 requests = "^2.32.3"
 bs4 = "^0.0.2"
+networkx = "^3.4.2"
 
 
 [tool.poetry.group.dev.dependencies]
