--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -33,10 +33,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-uv-
 
-      - name: Create virtual environment and install dependencies
+      - name: Create virtual environment
+        run: uv venv
+
+      - name: Install dependencies
         run: |
-          uv venv
-          # Install both main and dev dependencies
           uv pip install -e .
           uv pip install ruff==0.3.4 mypy>=1.13.0,<2 pytest>=8.3.4,<9 types-requests>=2.32.0,<3.0.0 types-beautifulsoup4>=4.12.0,<5.0.0
 
@@ -92,10 +93,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-uv-
 
-      - name: Create virtual environment and install dependencies
+      - name: Create virtual environment
+        run: uv venv
+
+      - name: Install dependencies
         run: |
-          uv venv
-          # Install both main and dev dependencies
           uv pip install -e .
           uv pip install pytest>=8.3.4,<9
 
