--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -36,10 +36,11 @@ jobs:
       - name: Create virtual environment
         run: uv venv
 
-      - name: Install dependencies
-        run: |
-          uv pip install -e .
-          uv pip install ruff==0.3.4 mypy>=1.13.0,<2 pytest>=8.3.4,<9 types-requests>=2.32.0,<3.0.0 types-beautifulsoup4>=4.12.0,<5.0.0
+      - name: Install project dependencies
+        run: uv pip install -e .
+
+      - name: Install dev tools
+        run: uv pip install ruff==0.3.4 mypy pytest types-requests types-beautifulsoup4
 
       - name: Debug environment
         run: |
@@ -96,10 +97,11 @@ jobs:
       - name: Create virtual environment
         run: uv venv
 
-      - name: Install dependencies
-        run: |
-          uv pip install -e .
-          uv pip install pytest>=8.3.4,<9
+      - name: Install project
+        run: uv pip install -e .
+
+      - name: Install pytest
+        run: uv pip install pytest
 
       - name: Run tests
         run: |
