--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: uv pip install -e .
 
       - name: Install dev tools
-        run: uv pip install ruff==0.3.4 mypy pytest types-requests types-beautifulsoup4
+        run: uv pip install ruff==0.3.4 mypy pytest types-requests types-beautifulsoup4 types-networkx
 
       - name: Debug environment
         run: |
