--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dev = [
     "mypy>=1.13.0,<2",
     "types-requests>=2.32.0,<3.0.0",
     "types-beautifulsoup4>=4.12.0,<5.0.0",
+    "types-networkx>=3.4.2",
     "pytest>=8.3.4,<9",
 ]
 
