--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -33,10 +33,18 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-uv-
 
-      - name: Create virtual environment and install project with dev dependencies
+      - name: Install dependencies with uv
         run: |
+          # Create the virtual environment
           uv venv
-          uv pip install -e ".[dev]"
+
+          # Install the project with both primary and dev dependencies
+          # Since uv doesn't natively support dependency groups through extras yet
+          # we'll install them separately for proper resolution
+          uv pip install -e .
+
+          # Extract and install dev dependencies
+          uv pip install ruff==0.3.4 mypy>=1.13.0,<2 types-requests>=2.32.0,<3.0.0 types-beautifulsoup4>=4.12.0,<5.0.0 types-networkx>=3.4.2 pytest>=8.3.4,<9
 
       - name: Debug environment
         run: |
@@ -88,10 +96,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-uv-
 
-      - name: Create virtual environment and install project with dev dependencies
+      - name: Install dependencies with uv
         run: |
+          # Create the virtual environment
           uv venv
-          uv pip install -e ".[dev]"
+
+          # Install the project
+          uv pip install -e .
+
+          # Install pytest
+          uv pip install pytest>=8.3.4,<9
 
       - name: Run tests
         run: |
