--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -13,61 +13,25 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
       - name: Install uv
-        run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+        uses: astral-sh/setup-uv@v5
 
-      - name: Set up uv cache
-        uses: actions/cache@v4
+      - name: Enable caching
+        uses: astral-sh/setup-uv@v5
         with:
-          path: |
-            ~/.cache/uv
-            ~/.uv
-          key: ${{ runner.os }}-uv-${{ hashFiles('**/pyproject.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-uv-
+          enable-cache: true
 
-      - name: Install dependencies with uv
-        run: |
-          # Create the virtual environment
-          uv venv
-
-          # Install the project with both primary and dev dependencies
-          # Since uv doesn't natively support dependency groups through extras yet
-          # we'll install them separately for proper resolution
-          uv pip install -e .
-
-          # Extract and install dev dependencies
-          uv pip install ruff==0.3.4 mypy>=1.13.0,<2 types-requests>=2.32.0,<3.0.0 types-beautifulsoup4>=4.12.0,<5.0.0 types-networkx>=3.4.2 pytest>=8.3.4,<9
-
-      - name: Debug environment
-        run: |
-          source .venv/bin/activate
-          echo "Python version:"
-          python --version
-          echo "Installed packages:"
-          pip list
+      - name: Install the project
+        run: uv sync --all-extras --dev
 
       - name: Check formatting
-        run: |
-          source .venv/bin/activate
-          python -m ruff format --check .
+        run: uv run ruff format --check .
 
       - name: Run linting
-        run: |
-          source .venv/bin/activate
-          python -m ruff check .
+        run: uv run ruff check .
 
       - name: Run type checking
-        run: |
-          source .venv/bin/activate
-          python -m mypy .
+        run: uv run mypy aoc/ solutions/ templates/ tests/ main.py
 
   test:
     name: Tests
@@ -76,38 +40,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
       - name: Install uv
-        run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+        uses: astral-sh/setup-uv@v5
 
-      - name: Set up uv cache
-        uses: actions/cache@v4
+      - name: Enable caching
+        uses: astral-sh/setup-uv@v5
         with:
-          path: |
-            ~/.cache/uv
-            ~/.uv
-          key: ${{ runner.os }}-uv-${{ hashFiles('**/pyproject.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-uv-
+          enable-cache: true
 
-      - name: Install dependencies with uv
-        run: |
-          # Create the virtual environment
-          uv venv
-
-          # Install the project
-          uv pip install -e .
-
-          # Install pytest
-          uv pip install pytest>=8.3.4,<9
+      - name: Install the project
+        run: uv sync --all-extras --dev
 
       - name: Run tests
-        run: |
-          source .venv/bin/activate
-          python -m pytest tests/
+        run: uv run pytest tests/
